--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
     $(".go").click(function() {
       var message = $(".message").val();
-      var encodedData = window.btoa('[Mariage de thomas et alice le 6 juin 2020, save the date]');
+      var encodedData = window.btoa('[ca marche]');
 
       var url = window.location.href;
       url = url.substring(0, url.lastIndexOf("/"));
