auto redirect fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <script language="javascript">
     var url = window.location.href;
-    window.location.href = "https://bloussou.github.io/mariomariage/src/?W01hcmlhZ2UgZGUgdGhvbWFzIGV0IGFsaWNlIGxlIDYganVpbiAyMDIwLCBzYXZlIHRoZSBkYXRlXQ==";
+    window.location.href = "https://bloussou.github.io/mariomariage/src/game.html?W01hcmlhZ2UgZGUgdGhvbWFzIGV0IGFsaWNlIGxlIDYganVpbiAyMDIwLCBzYXZlIHRoZSBkYXRlXQ==";
   </script>
 </body>
 
