--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <script language="javascript">
     var url = window.location.href;
-    window.location.href = url + "src/game.html?W01hcmlhZ2UgZGUgdGhvbWFzIGV0IGFsaWNlIGxlIDYganVpbiAyMDIwLCBzYXZlIHRoZSBkYXRlXQ==";
+    console.log(url);
+    window.location.href = url;
   </script>
 </body>
 
