--- a/src/announcement.html
+++ b/src/announcement.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" content="width=device-width, initial-scale=1"/>
-  <title>L'annonce</title>
-  <style>
-    body, html {
+  <head>
+    <meta charset="utf-8" content="width=device-width, initial-scale=1" />
+    <title>L'annonce</title>
+    <style>
+      body,
+      html {
         height: 100%;
         margin: 0;
-    }
+      }
 
-    .bg {
+      .bg {
         /* The image used */
-        background-image: url("../data/faire_part.png");
+        background-image: url("../data/faire_part.gif");
 
         /* Full height */
-        height: 100%; 
+        height: 100%;
 
         /* Center and scale the image nicely */
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-    }
-    img {
+      }
+      img {
         width: auto;
         height: 100%;
         display: block;
         margin-left: auto;
         margin-right: auto;
-    }
-  </style>
-</head>
+      }
+    </style>
+  </head>
 
-<body>
-        <img src="../data/faire_part.png" >
-</body>
-
+  <body>
+    <img src="../data/faire_part.gifrs" />
+  </body>
 </html>
