--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         left: 0;
       }
     </style>
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="./favicon.png" />
   </head>
 
   <body>
