--- a/src/announcement.html
+++ b/src/announcement.html
@@ -34,5 +34,6 @@
 
   <body>
     <img src="../data/faire_part.gif" />
+    <audio src="../data/Toddterje.mp3" autoplay></audio>
   </body>
 </html>
