correct name sound

--- a/src/announcement.html
+++ b/src/announcement.html
@@ -34,6 +34,6 @@
 
   <body>
     <img src="../data/faire_part.gif" />
-    <audio src="../data/Toddterje.mp3" autoplay></audio>
+    <audio src="../data/ToddTerje.mp3" autoplay></audio>
   </body>
 </html>
